fe/src/Login.module.css
.main {
  margin-top: 200px;
  margin-left: 140px;
}

.main h1 {
  font-size: 32px;
  letter-spacing: 16px;
}

.parentDiv {
  margin-top: 60px;
  font-family: "Inter", sans-serif;
  font-size: 18px;
  display: flex;
}

.inputDiv {
  margin-bottom: 30px;
}

input {
  border-radius: 5px;
  border: 1px solid #000;
  width: 367px;
  height: 44px;
  font-family: inherit;
  font-size: inherit;
  padding-left: 12px;
}

.loginBtn {
  margin-top: 60px;
}

.loginBtn button {
  width: 169px;
  height: 54px;
  background-color: #2196F3;
  border: 0;
  border-radius: 5px;
  font-family: 'Inter', sans-serif;
  font-size: 18px;
  color: #FFF;
  font-weight: 400;
  cursor: pointer;
  margin-left: 25%;
  margin-right: 25%;
}

.signupPrompt {
  margin-top: 60px;
  margin-left: 26px;
}

.signupPrompt a {
  text-decoration: none;
  font-weight: 700;
  color: #666;
}

.imgDiv {
  width: 567px;
  height: 413px;
  margin-left: 327px;
}

.error {
  font-size: 12px;
  color: #F44336;
}

.apiErrorMsg {
  text-align: center;
  font-weight: 700;
}

.passwordContainer {
  position: relative;
}

.showPasswordDiv {
  position: absolute;
  display: inline-block;
  top: 12px;
  right: 10px;
  cursor: pointer;
}

